--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <link href="style.css" rel="stylesheet">
     <title>AAA Insurance</title>
     <!-- Navbar-->
     <!-- Add picture of Virginia On The Left Side Of The Nav Bar Left of "AAA Insurance"-->
@@ -21,17 +22,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <!-- link Product Page here-->
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Products</a>
+                    <!-- <li class="nav-item dropdown">
+                        <-- link Product Page here-->
+                        <!-- <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Products</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Home Insurance</a>
                             <a class="dropdown-item" href="#">Car Insurance</a>
                             <a class="dropdown-item" href="#">Roadside Assistance</a>
                             <a class="dropdown-item" href="#">Watercraft</a>
                             <a class="dropdown-item" href="#">Umbrella</a>
-                        </div>
-                    </li>
+                        </div> -->
+                    <!-- </li> --> 
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Speak To Your Agent</a>
+                            </li>
                     <li class="nav-item">
                         <!-- Link contact info here-->
                         <!-- Create A Form With Click To Call And A Email Inquiry-->
@@ -41,6 +47,9 @@
             </div>
         </nav>
     </div>
+
+    <!-- Virginia Photo Placement (left Of Nav Bar)-->
+    <img src="virginiaJeep.jpg" class="img-thumbnail rounded-circle img-fluid float-left" alt="Virginia Insurance">
     <!-- AAA Insurance Logo-->
     <!-- Move To Center Of Nav Bar-->
     <div class="container">
